[package]
name = "node_provider_auth_white_list"
version = "0.1.0"
authors = ["Yahor Tsaryk <yahor.tsaryk@cere.io>"]
edition = "2021"
description = "Node provider authorization layer based on admin approval"
license = "Apache-2.0"

[dependencies]
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

ink = { version = "4.2.0", default-features = false }
ink_env = { version = "4.2.0", default-features = false }

[lib]
name = "node_provider_auth_white_list"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_env/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
